# tab_fm_link_pred

./: .gitignore  Dockerfile  Makefile  README.md  experiment_metrics.json  experiment_metrics_complex.json  experiment_metrics_tabicl_full_classification.json  knowledge_graph_embeddings_101.py  main.py  pyproject.toml  requirements.txt
kube/: experiments.py  render_job.py  submit_job.py  tutorial_example.py  tutorial_preset.py
src/: data.py  experiment.py  job.yaml  job_complex.yaml  job_complex_kge.yaml  job_kgbert.yaml  job_limix.yaml  job_rotatee.yaml  job_saint.yaml  job_tabdpt.yaml  job_tabicl.yaml  job_tabpfn.yaml  job_tag.yaml  job_tag_graph.yaml  limix_config_noquantile.json  metrics.py  model.py  plot_results.py  ranking_evaluation.py  run.py  run_ranking_eval.py  tag_graph.py  test.py
tests/: test_data.py  test_metrics.py
