[project]
name = "tab-fm-link-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabicl",
    "tabpfn",
    "datasets",
    "pandas",
    "numpy",
    "scikit-learn",
    "huggingface-hub>=0.36.0",
    "omegaconf>=2.3.0",
    "safetensors>=0.7.0",
    "faiss-cpu>=1.13.2",
]

[tool.uv]
package = true

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
